[gd_scene load_steps=4 format=2]

[ext_resource path="res://screens/MainScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://screens/CustomWindow.gd" type="Script" id=2]
[ext_resource path="res://res/windowcontrol.tres" type="Theme" id=3]

[node name="CustomWindow" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 10
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 7
custom_constants/margin_top = 7
custom_constants/margin_left = 7
custom_constants/margin_bottom = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainScreen" parent="PanelContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
mouse_filter = 1

[node name="WindowControl" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -174.0
margin_top = 6.0
margin_right = -7.0
margin_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="WindowControl"]
margin_left = 5.0
margin_top = 5.0
margin_right = 162.0
margin_bottom = 28.0

[node name="Minimize" type="Button" parent="WindowControl/HBoxContainer"]
margin_right = 76.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "-"

[node name="Maximize" type="Button" parent="WindowControl/HBoxContainer"]
visible = false
margin_left = 53.0
margin_right = 103.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "O"

[node name="Exit" type="Button" parent="WindowControl/HBoxContainer"]
margin_left = 80.0
margin_right = 157.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "X"

[connection signal="gui_input" from="." to="." method="_on_CustomWindow_gui_input"]
[connection signal="pressed" from="WindowControl/HBoxContainer/Minimize" to="." method="_on_Minimize_pressed"]
[connection signal="pressed" from="WindowControl/HBoxContainer/Maximize" to="." method="_on_Maximize_pressed"]
[connection signal="pressed" from="WindowControl/HBoxContainer/Exit" to="." method="_on_Exit_pressed"]
